--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <title>Power BI Chat</title>
 <style>
-    /* This is the styling for our chat window */
     body { font-family: 'Segoe UI', sans-serif; margin: 10px; background-color: #f3f2f1; }
     #chat-container { display: flex; flex-direction: column; height: 95vh; border: 1px solid #ccc; border-radius: 5px; background-color: white; }
     #chat-log { flex-grow: 1; padding: 10px; overflow-y: auto; border-bottom: 1px solid #ccc; }
@@ -11,8 +10,8 @@
     input { flex-grow: 1; border: 1px solid #ccc; border-radius: 3px; padding: 8px; }
     button { padding: 8px 12px; margin-left: 10px; border: none; background-color: #0078d4; color: white; border-radius: 3px; cursor: pointer; }
     button:hover { background-color: #005a9e; }
-    .user-message, .bot-message { margin-bottom: 10px; padding: 8px; border-radius: 5px; max-width: 80%; }
-    .user-message { background-color: #e1f0ff; align-self: flex-end; }
+    .user-message, .bot-message { margin-bottom: 10px; padding: 8px; border-radius: 5px; max-width: 80%; word-wrap: break-word; }
+    .user-message { background-color: #e1f0ff; align-self: flex-end; margin-left: auto; }
     .bot-message { background-color: #f3f2f1; align-self: flex-start; }
 </style>
 </head>
@@ -24,7 +23,7 @@
     </div>
     <div id="input-container">
         <input type="text" id="user-input" placeholder="Type your question here...">
-        <button onclick="sendMessage()">Send</button>
+        <button id="send-button">Send</button>
     </div>
 </div>
 
@@ -48,9 +47,8 @@
 
     const chatLog = document.getElementById('chat-log');
     const userInput = document.getElementById('user-input');
+    const sendButton = document.getElementById('send-button');
 
-    // This is the data from your Power BI report. 
-    // For this simple free version, we will paste the data directly here.
     const dataContext = `
         --- Power BI Data Summary ---
         Total Complaints: 295
@@ -65,23 +63,15 @@
     `;
 
     async function sendMessage() {
-        const userMessage = userInput.value;
+        const userMessage = userInput.value.trim();
         if (!userMessage) return;
 
-        // Display user's message
         addMessage(userMessage, 'user-message');
         userInput.value = '';
         
-        // Add a "thinking..." message
         const thinkingDiv = addMessage('Thinking...', 'bot-message');
 
-        // This is the prompt we send to Google Gemini
-        const prompt = `
-            Context: You are a Power BI data analyst. Answer the user's question based ONLY on the following data summary. Be brief and to the point.
-            Data Summary: ${dataContext}
-            Question: ${userMessage}
-            Answer: 
-        `;
+        const prompt = `Context: You are a Power BI data analyst. Answer the user's question based ONLY on the following data summary. Be brief and to the point. Data Summary: ${dataContext}. Question: ${userMessage}. Answer:`;
 
         try {
             const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${API_KEY}`, {
@@ -91,19 +81,19 @@
             });
 
             if (!response.ok) {
-                throw new Error('Network response was not ok.');
+                const errorData = await response.json();
+                throw new Error(errorData.error.message);
             }
 
             const data = await response.json();
             const botResponse = data.candidates[0].content.parts[0].text;
 
-            // Remove the "thinking..." message and show the real answer
             chatLog.removeChild(thinkingDiv);
             addMessage(botResponse, 'bot-message');
 
         } catch (error) {
             chatLog.removeChild(thinkingDiv);
-            addMessage('Sorry, I encountered an error. Please check the API key and try again.', 'bot-message');
+            addMessage(`Sorry, an error occurred: ${error.message}`, 'bot-message');
             console.error('Error:', error);
         }
     }
@@ -113,11 +103,11 @@
         div.className = className;
         div.textContent = text;
         chatLog.appendChild(div);
-        chatLog.scrollTop = chatLog.scrollHeight; // Auto-scroll to bottom
+        chatLog.scrollTop = chatLog.scrollHeight;
         return div;
     }
 
-    // Allow pressing Enter to send message
+    sendButton.addEventListener('click', sendMessage);
     userInput.addEventListener('keyup', function(event) {
         if (event.key === 'Enter') {
             sendMessage();
