--- a/index.html
+++ b/index.html
@@ -49,18 +49,16 @@
     const userInput = document.getElementById('user-input');
     const sendButton = document.getElementById('send-button');
 
-    const dataContext = `
-        --- Power BI Data Summary ---
-        Total Complaints: 295
-        Total Devices with Complaints: 192
-        Repeated Complaints: 234
-        Not Repeated Complaints: 61
-        Complaints by City: Karachi (197), Lahore (78), Other (20)
-        Top Complaint Types: Leakage from Unit, No Water Dispensing, No Cooling
-        Top Resolutions: Unit Flushed (60), No issue Found (31), Pending on Inventory (26)
-        Parts Replaced: 150 (51%)
-        Parts Not Replaced: 145 (49%)
-    `;
+    const dataContext = `--- Power BI Data Summary ---
+Total Complaints: 295
+Total Devices with Complaints: 192
+Repeated Complaints: 234
+Not Repeated Complaints: 61
+Complaints by City: Karachi (197), Lahore (78), Other (20)
+Top Complaint Types: Leakage from Unit, No Water Dispensing, No Cooling
+Top Resolutions: Unit Flushed (60), No issue Found (31), Pending on Inventory (26)
+Parts Replaced: 150 (51%)
+Parts Not Replaced: 145 (49%)`;
 
     async function sendMessage() {
         const userMessage = userInput.value.trim();
@@ -74,7 +72,7 @@
         const prompt = `Context: You are a Power BI data analyst. Answer the user's question based ONLY on the following data summary. Be brief and to the point. Data Summary: ${dataContext}. Question: ${userMessage}. Answer:`;
 
         try {
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${API_KEY}`, {
+            const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=' + API_KEY, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ contents: [{ parts: [{ text: prompt }] }] })
@@ -93,7 +91,7 @@
 
         } catch (error) {
             chatLog.removeChild(thinkingDiv);
-            addMessage(`Sorry, an error occurred: ${error.message}`, 'bot-message');
+            addMessage('Sorry, an error occurred: ' + error.message, 'bot-message');
             console.error('Error:', error);
         }
     }
